Version History
===============


Version 0.9.3 (unreleased)
--------------------------
* Added a tooltip to explain fuzzy entries (#206)


Version 0.9.2
-------------
* Cleanup of imports, and use relative imports. Hopefully fixes #209.
* Travis: cleanup and test with Python 3.7


Version 0.9.1
-------------
* Removed old compatibility code for Django < 1.11 (#205, thanks @claudep)
* Allow overriding rosetta login url (#210, thanks @izimobil)
* Test against Django 2.2
* Optional line number in the occurrences column (#215, thanks @pauloxnet)
* Add search in msgctxt (#213, thanks @yakky)
* Strip code tag from Yandex response. (#212, thanks @izimobil)
* Test friendly settings and better tests (#211, thanks @izimobil)
* The reference language didn't work in widows (#189, thanks @pedfercue)


Version 0.9.0
-------------
* Fix `ROSETTA_REQUIRES_AUTH = False` wasn't respected (#203, @BarnabasSzabolcs)
* Django-rosetta now requires Django 1.11 or newer. Rosetta 0.8.3 is the last version to support Django 1.8 through 1.10. (#204, thanks @claudep)


Version 0.8.3
-------------
* Replace the (no longer working) Microsoft translation API with the new Azure Translator API (Fixes #200 and #201, thank you @svdvonde)


Version 0.8.2
-------------
* Avoid UnicodeEncodeError when quering strings (#197, thanks @YAtOff)
* Test against Django 2.1


Version 0.8.1
-------------
* PR #194, thanks again @jbaldivieso!

  * Allow searching for plural strings, both in the original and translation. (Fixes #186)
  * HTML-encoding ampersands in the template (minor regression introduced with 0.8.0)
  * Stop showing "None" in the search input if there was no search query submitted

Version 0.8.0
--------------
* PR #194, huge thanks to @jbaldivieso:

  * Better, cleaner RESTful URLs
  * Massive rewrite of Rosetta's view functions as CBVs
  * Better management of cached content

* Check for PEP8 validity during tests

Version 0.7.14
--------------