@@ -51,6 +51,8 @@ class RosettaSettings(object):
         'ROSETTA_AUTO_COMPILE': ('AUTO_COMPILE', True),
         'ROSETTA_SHOW_AT_ADMIN_PANEL': ('SHOW_AT_ADMIN_PANEL', False),
         'ROSETTA_LOGIN_URL': ('LOGIN_URL', dj_settings.LOGIN_URL),
+
+        'ROSETTA_LANGUAGES': ('ROSETTA_LANGUAGES', dj_settings.LANGUAGES)
     }
 
     def __init__(self):
