@@ -5,6 +5,7 @@ Version History
 Version 0.9.3 (unreleased)
 --------------------------
 * Added a tooltip to explain fuzzy entries (#206)
+* New ROSETTA_LANGUAGES setting allows for translating languages which are not yet in LANGUAGES (#219)
 
 
 Version 0.9.2
